# nn_libs

./: LICENSE  README.md
tflite/: CMakeLists.txt  build.bat
tflite/mman_win32/: unistd.h
tflite/mman_win32/sys/: mman.c  mman.h
